src/styles/pages/_dp-viola.scss
:root {
  --yellow-bg: #fde293;
  --green-bg: #81c995;
  --red-bg: #f28b82;
  --blue-bg: #8ab4f8;
}

.viola-section {
  .generate-wrapper {
    padding: 5rem 0 9rem;

    .header-text {
      color: #1c1c1c;
      display: flex;
      align-items: center;
      flex-direction: column;
      gap: 0.5rem;

      .sub {
        font-size: 1.75rem;
        font-weight: 500;
      }

      .title {
        font-size: 3.875rem;
        font-weight: 600;
      }
    }

    @include media('<=tablet') {
      padding: 2.25rem 0 2rem;

      .header-text {
        .sub {
          font-size: 0.875rem;
        }

        .title {
          font-size: 1.5rem;
        }
      }
    }
  }

  .frame-wrapper {
    overflow-x: auto;
  }

  .dp-frame {
    border: 6.87px solid #ffffff;
    box-shadow: -14.66px 9.78px 73.44px 0px #00000021;
    width: 100%;
    height: 100%;
    margin: 5rem auto 0;
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;

    .row {
      display: flex;
      width: 100%;
    }

    .r1 {
      .col {
        width: 50%;
        height: 690px;

        .in-col {
          height: 50%;
        }
      }
    }

    .r2 {
      .col {
        width: 70%;
        height: 340px;

        &:last-child {
          width: 30%;
        }

        .ic-1 {
          height: 100px;
        }

        .ic-2 {
          height: calc(100% - 100px);
        }
      }
    }

    .r3 {
      position: relative;

      .masked {
        right: 0;
        left: 0;
        bottom: 0.3rem;
        height: 145px;
        position: absolute;
        object-fit: cover;
      }

      .col {
        width: 30%;
        height: 100px;

        &:last-child {
          width: 70%;
        }
      }
    }

    .schedule-text {
      display: flex;
      flex-direction: column;

      .name {
        color: #666666;
        font-size: 1.25rem;
        font-weight: 400;
      }

      .value {
        color: #000000;
        font-size: 2.8rem;
        font-weight: 700;
      }
    }

    .img-frame {
      height: 570px;
      width: 60%;
      border: 10.92px solid #fffaeb;
      position: relative;
      overflow: hidden;
      background-position: center;
      background-repeat: no-repeat;
      background-size: cover;

      img {
        object-fit: cover;
      }
    }

    .img-shape-mask {
      height: 180px;
      width: 100px;
      background-size: cover;
      position: relative;
      // z-index: 2;
      overflow: hidden;

      img {
        max-width: 100%;
        z-index: 1;
      }
    }

    .box-1 {
      position: relative;
      display: flex;
      justify-content: center;
      align-items: center;

      .text {
        color: #1e1e1e;
        font-weight: 500;
        font-size: 2.5rem;
        width: 75%;
        text-align: center;
      }

      img {
        position: absolute;
        object-fit: cover;
      }

      .arrow,
      .Ellipses,
      .double-quotes,
      .forward-slash {
        position: absolute;
      }

      .arrow {
        left: 0;
        top: 0;
      }

      .Ellipses {
        right: 50px;
        top: 60px;
      }

      .double-quotes {
        left: 50px;
        bottom: 20px;
      }

      .forward-slash {
        right: 0;
        bottom: 0;
      }
    }

    .box-2 {
      position: relative;
      z-index: 1;
      width: calc(100% + 100px);

      .name-text {
        color: #fffaeb;
        font-size: 5rem;
        font-weight: 500;
        text-align: center;

        span {
          font-size: 2.5rem;
        }
      }
    }

    .box-2,
    .box-3,
    .box-4,
    .box-5,
    .box-6 {
      display: flex;
      align-items: center;
      justify-content: center;
    }

    .box-4 {
      .logo {
        position: relative;
        // background-image: url('../../../public/images/png/devfest-lg-logo.png');
        // background-size: contain;
        // background-repeat: no-repeat;
        width: 600px;
        height: 150px;
      }
    }

    .box-6 {
      .schedule-text {
        width: 80%;
      }
    }

    .box-1,
    .box-2,
    .box-3,
    .box-4,
    .box-5,
    .box-6,
    .box-7,
    .box-8 {
      border: 5.46px solid #fffaeb;
    }

    .box-1 {
      border-bottom-width: 0;
    }

    .box-2 {
      border-top-width: calc(5.46px * 2);
      border-right-width: calc(5.46px * 2);
    }

    @include media('<=big_tablet') {
      border: 2.07px solid #ffffff;
      box-shadow: -3.61px 2.41px 18.1px 0px #00000021;
      margin: 1.25rem auto 0;
      max-width: 400px;

      .r1 {
        .col {
          height: 210px;
        }
      }

      .r2 {
        .col {
          height: 104px;

          .ic-1 {
            height: 36px;
          }

          .ic-2 {
            height: calc(100% - 36px);
          }
        }
      }

      .r3 {
        .masked {
          height: 45px;
          bottom: 2px;
        }

        .col {
          height: 30px;
        }
      }

      .schedule-text {
        .name {
          font-size: 0.5rem;
        }

        .value {
          font-size: 0.75rem;
        }
      }

      .img-frame {
        height: 180px;
        width: 100px;
        border: 3.28px solid #fffaeb;
      }

      .box-1 {
        .text {
          font-size: 0.75rem;
        }

        .arrow {
          top: 0;
          width: 32px;
          height: 20px;
        }

        .Ellipses {
          width: 40px;
          height: 15px;
          right: 13px;
          top: 15px;
        }

        .double-quotes {
          width: 26px;
          height: 18px;
          left: 12px;
          bottom: 5px;
        }

        .forward-slash {
          width: 30px;
          height: 30px;
        }
      }

      .box-2 {
        width: calc(100% + 35px);

        .name-text {
          font-size: 1.5rem;
          padding: 0.5rem 0;

          span {
            font-size: 0.75rem;
          }
        }
      }

      .box-4 {
        .logo {
          width: 160px;
          height: 47px;
        }
      }

      .box-6 {
        .schedule-text {
          width: 65%;
        }
      }

      .box-1,
      .box-2,
      .box-3,
      .box-4,
      .box-5,
      .box-6,
      .box-7,
      .box-8 {
        border: 1.64px solid #fffaeb;
      }

      .box-1 {
        border-bottom-width: 0;
      }

      .box-2 {
        border-top-width: 2.46px;
        border-right-width: 2.46px;
      }
    }

    @include media('<=phone') {
      min-width: 370px;
    }
  }

  // Frames
  .frame-1 {
    .box-1,
    .box-8 {
      background-color: var(--yellow-bg);
    }
    .box-2,
    .box-7 {
      background-color: var(--red-bg);
    }
    .box-3,
    .box-4 {
      background-color: var(--green-bg);
    }
    .box-5,
    .box-6 {
      background-color: var(--blue-bg);
    }
  }

  .frame-2 {
    .box-4,
    .box-8 {
      background-color: var(--yellow-bg);
    }
    .box-1 {
      background-color: var(--red-bg);
    }
    .box-2,
    .box-5,
    .box-6 {
      background-color: var(--green-bg);
    }
    .box-3,
    .box-7 {
      background-color: var(--blue-bg);
    }
  }

  .frame-3 {
    .box-3,
    .box-7 {
      background-color: var(--yellow-bg);
    }
    .box-2,
    .box-8 {
      background-color: var(--red-bg);
    }
    .box-1,
    .box-5,
    .box-6 {
      background-color: var(--green-bg);
    }
    .box-4 {
      background-color: var(--blue-bg);
    }
  }

  .frame-4 {
    .box-4 {
      background-color: var(--yellow-bg);
    }
    .box-3,
    .box-7 {
      background-color: var(--red-bg);
    }
    .box-1,
    .box-8 {
      background-color: var(--green-bg);
    }
    .box-2,
    .box-5,
    .box-6 {
      background-color: var(--blue-bg);
    }
  }

  // Shapes
  .rounded-rectangle {
    border-radius: 200px;
  }

  .function-wrapper {
    height: 360px;
    display: flex;
    align-items: center;
    background-color: var(--dv-black);

    .btn-wrapper {
      display: flex;
      flex-wrap: nowrap;
      align-items: center;
      gap: 1.875rem;

      button {
        width: 100%;
        border: 1px solid var(--dv-light-yellow);

        &:first-child {
          background-color: var(--dv-light-yellow);
        }

        @include media('<=tablet') {
          padding: 0.5rem !important;

          img {
            width: 12px;
            height: 12px;
          }
        }
      }
    }

    @include media('<=tablet') {
      height: 100px;

      .btn-wrapper {
        gap: 0.75rem;
        overflow-y: auto;
      }
    }
  }
}

